--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,8 @@ name: Deploy Meal Prep App
 on:
   push:
     branches:
-      - main # Trigger the workflow on push to the main branch
+      - main
+      - deployment
 
 jobs:
   deploy:
